update(app): finish Google Analytics page tracking

--- a/src/index.html
+++ b/src/index.html
@@ -32,16 +32,14 @@
 
 <body>
   <app-root></app-root>
-  <!-- Google Analytics -->
-  <!-- <script>
+  <script>
     !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
     (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
     r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
     }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-49153111-8');
-    ga('send', 'pageview');
-  </script> -->
+    //// Google Analytics ////
+    ga('create', 'UA-XXXXXXXX-1', 'auto');
+  </script>
 </body>
 
 </html>
