--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,13 @@
   <title>DevFest 2017</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="msapplication-starturl" content="/">
+  <meta name="theme-color" content="#4285F4">
+  <link rel="manifest" href="/manifest.json">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <meta itemprop="name" content="DevFest 2017">
@@ -32,6 +37,11 @@
 
 <body>
   <app-root></app-root>
+  <noscript>
+    <div style="border: 1px solid purple; padding: 10px">
+      <span style="color:red">JavaScript is not enabled!</span>
+    </div>
+  </noscript>
   <script>
     !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
     (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
@@ -39,6 +49,16 @@
     }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     //// Google Analytics ////
     ga('create', 'UA-XXXXXXXX-1', 'auto');
+    //// Service Worker ////
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js')
+      .then((registration) => {
+        console.log('SW registered');
+      })
+      .catch((err) => {
+        console.log('SW error', err);
+      });
+    }
   </script>
 </body>
 
