update(styles): refactor styles & variables

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
 
 <body>
   <app-root></app-root>
+  <div class="loading">
+    <h1>loading...</h1>
+  </div>
   <noscript>
     <div style="border: 1px solid purple; padding: 10px">
       <span style="color:red">JavaScript is not enabled!</span>
