Updated for EldoretTechweek 2017
Updated for EldoretTechweek 2017

--- a/src/index.html
+++ b/src/index.html
@@ -3,36 +3,36 @@
 
 <head>
   <meta charset="utf-8">
-  <title>DevFest 2017</title>
+  <title>Eldoret Techweek 2017</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="msapplication-starturl" content="/">
+  <meta name="msapplication--starturl" content="/">
   <meta name="theme-color" content="#4285F4">
   <link rel="manifest" href="/manifest.json">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon.png">
 
-  <meta itemprop="name" content="DevFest 2017">
-  <meta itemprop="description" content="A tech conference carefully crafted for you by your GDG community! All about Android, Web, and Cloud from the world experts!">
-  <meta itemprop="image" content="assets/img/devfest.png">
+  <meta itemprop="name" content="The Eldoret Techweek">
+  <meta itemprop="description" content="A tech conference carefully crafted for you ! All about Android, Web, and Cloud from the world experts!">
+  <meta itemprop="image" content="assets/img/etw3.png">
 
-  <meta property="og:title" content="DevFest 2017">
-  <meta property="og:site_name" content="DevFest 2017">
+  <meta property="og:title" content="The Eldoret Techweek">
+  <meta property="og:site_name" content="The Eldoret Techweek">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://devfest.com/">
-  <meta property="og:description" content="A tech conference carefully crafted for you by your GDG community! All about Android, Web, and Cloud from the world experts!">
+  <meta property="og:url" content="https://sites.gdgmoi.com/">
+  <meta property="og:description" content="A tech conference carefully crafted for you ! All about Android, Web, and Cloud from the world experts!">
   <meta property="og:type" content="Event">
-  <meta property="og:image" content="assets/img/devfest.png">
+  <meta property="og:image" content="assets/img/etw3.png">
   <meta property="og:image:type" content="image/png">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:creator" content="@gdg">
-  <meta name="twitter:title" content="DevFest 2017">
-  <meta name="twitter:description" content="A tech conference carefully crafted for you by your GDG community! All about Android, Web, and Cloud from the world experts!">
-  <meta name="twitter:image" content="assets/img/devfest.png">
+  <meta name="twitter:creator" content="@GDGMoi">
+  <meta name="twitter:title" content="The Eldoret Techweek">
+  <meta name="twitter:description" content="A tech conference carefully crafted for you ! All about Android, Web, and Cloud from the world experts!">
+  <meta name="twitter:image" content="assets/img/etw3.png">
 </head>
 
 <body>
