update meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,14 @@
   <title>DevFest 2017</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="msapplication-starturl" content="/">
   <meta name="theme-color" content="#4285F4">
+  <meta name="description" content="A tech conference carefully crafted for you by your GDG community! All about Android, Web, and Cloud from the world experts!">
+
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
