--- a/src/index.html
+++ b/src/index.html
@@ -3,36 +3,36 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Eldoret Techweek 2017</title>
+  <title>DevFest Nairobi</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="msapplication--starturl" content="/">
+  <meta name="msapplication-starturl" content="/">
   <meta name="theme-color" content="#4285F4">
   <link rel="manifest" href="/manifest.json">
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <meta itemprop="name" content="The Eldoret Techweek">
-  <meta itemprop="description" content="A tech conference carefully crafted for you ! All about Android, Web, and Cloud from the world experts!">
-  <meta itemprop="image" content="assets/img/etw3.png">
+  <meta itemprop="name" content="DevFest Nairobi and Central">
+  <meta itemprop="description" content="Powered by a shared belief that when developers come together to exchange ideas, amazing things can happen.">
+  <meta itemprop="image" content="assets/img/socialshare.png">
 
-  <meta property="og:title" content="The Eldoret Techweek">
-  <meta property="og:site_name" content="The Eldoret Techweek">
+  <meta property="og:title" content="DevFest Nairobi and Central">
+  <meta property="og:site_name" content="DevFest Nairobi and Central">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://sites.gdgmoi.com/">
-  <meta property="og:description" content="A tech conference carefully crafted for you ! All about Android, Web, and Cloud from the world experts!">
+  <meta property="og:url" content="https://devfestnairobi.gdgkenya.org">
+  <meta property="og:description" content="Powered by a shared belief that when developers come together to exchange ideas, amazing things can happen.">
   <meta property="og:type" content="Event">
-  <meta property="og:image" content="assets/img/etw3.png">
+  <meta property="og:image" content="assets/img/socialshare.png">
   <meta property="og:image:type" content="image/png">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:creator" content="@GDGMoi">
-  <meta name="twitter:title" content="The Eldoret Techweek">
-  <meta name="twitter:description" content="A tech conference carefully crafted for you ! All about Android, Web, and Cloud from the world experts!">
-  <meta name="twitter:image" content="assets/img/etw3.png">
+  <meta name="twitter:creator" content="@mayeedwin1">
+  <meta name="twitter:title" content="DevFest Nairobi and Central">
+  <meta name="twitter:description" content="Powered by a shared belief that when developers come together to exchange ideas, amazing things can happen.">
+  <meta name="twitter:image" content="assets/img/socialshare.png">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
     r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
     }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     //// Google Analytics ////
-    ga('create', 'UA-XXXXXXXX-1', 'auto');
+    ga('create', 'UA-109001280-1', 'auto');
     //// Service Worker ////
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/service-worker.js')
