update(index): remove year from demo site meta data

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>DevFest 2017</title>
+  <title>DevFest City</title>
   <base href="/">
 
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -17,12 +17,12 @@
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <meta itemprop="name" content="DevFest 2017">
+  <meta itemprop="name" content="DevFest City">
   <meta itemprop="description" content="A tech conference carefully crafted for you by your GDG community! All about Android, Web, and Cloud from the world experts!">
   <meta itemprop="image" content="assets/img/devfest.png">
 
-  <meta property="og:title" content="DevFest 2017">
-  <meta property="og:site_name" content="DevFest 2017">
+  <meta property="og:title" content="DevFest City">
+  <meta property="og:site_name" content="DevFest City">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://devfest.com/">
   <meta property="og:description" content="A tech conference carefully crafted for you by your GDG community! All about Android, Web, and Cloud from the world experts!">
@@ -32,7 +32,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:creator" content="@gdg">
-  <meta name="twitter:title" content="DevFest 2017">
+  <meta name="twitter:title" content="DevFest City">
   <meta name="twitter:description" content="A tech conference carefully crafted for you by your GDG community! All about Android, Web, and Cloud from the world experts!">
   <meta name="twitter:image" content="assets/img/devfest.png">
 
